--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 					<h3 id="head_labels_form">Add label</h3><hr>
 					<form onsubmit="return labels.add()" id="labels_form">
 						<div class="part">
-							<input type="text" placeholder="Label" pattern="[\w]{1,8}" required>
+							<input type="text" placeholder="Label" pattern="[\wа-яА-ЯЁё]{1,8}" required>
 							<button>Add</button>
 						</div>
 						<textarea placeholder="Description" pattern="[\w]{1,128}"></textarea>
