--- a/diploma/index.html
+++ b/diploma/index.html
@@ -69,7 +69,7 @@
 							<input type="text" placeholder="Label" pattern=".{1,8}" required>
 							<button>Add</button>
 						</div>
-						<textarea placeholder="Description" pattern="[\w]{1,128}"></textarea>
+						<textarea placeholder="Description" pattern=".{1,128}"></textarea>
 					</form>
 				</fieldset>
 				<!-- End add label -->
@@ -109,7 +109,7 @@
 					<h3 id="head_profiles_form">Add profile</h3><hr>
 					<form onsubmit="return profiles.add()" id="profiles_form">
 						<div class="part">
-							<input type="text" placeholder="Profile name" pattern="[\w]{1,64}" required>
+							<input type="text" placeholder="Profile name" pattern=".{1,64}" required>
 							<button>Add</button>
 						</div>
 					</form>
