diploma version upd

--- a/other/index.html
+++ b/other/index.html
@@ -45,15 +45,11 @@
 			<div class="point button" id="hide">Hide</div>
 			<!-- Out labels -->
 			<fieldset>
-				<legend>Инструкция</legend>
-				<p><b>Левая кнопка мыши</b> - вызов текстового окно для ввода заметки</p><br>
-				<p><b>Правая кнопка мыши</b> - удаление заметки</p><br>
-				<p><b>Для добавления или изменения заметки</b> нужно нажать на ячейку с открытым текстовым окном и записанными в него данными</p><br>
-				<p><b>Ячейки с заметками</b> обозначаются знаком <b>N</b></p>
-				<!-- <ul id="out_labels"></ul> -->
+				<legend>Labels</legend>
+				<ul id="out_labels"></ul>
 			</fieldset><br>
 			<!-- End out labels -->
-			<!-- <div onclick="menu.show_side('labels')" class="point button">Labels</div> -->
+			<div onclick="menu.show_side('labels')" class="point button">Labels</div>
 			<div onclick="menu.show_side('profiles')" class="point button">Profiles</div>
 			<div onclick="menu.show_side('directories')" class="point button">Directories</div>
 		</div>
